2001-08-06  Roland McGrath  <roland@frob.com>

	* wait.c (S_proc_wait: reap): Set *PID_STATUS to CHILD->p_pid.
	Reported by Neal H Walfield  <neal@cs.uml.edu>.

	* mgt.c (allocate_proc): Don't zero P->p_pi.
	Reported by Neal H Walfield  <neal@cs.uml.edu>.

2001-08-05  Roland McGrath  <roland@frob.com>

	* wait.c (sample_rusage): New function.
	(S_proc_mark_exit): Call it.

2001-08-04  Roland McGrath  <roland@frob.com>

	* proc.h (struct proc): New members p_rusage, p_child_rusage.
	* wait.c (rusage_add): New static function.
	(alert_parent): Use it to add dead child's p_rusage into parent's
	p_child_rusage.
	(S_proc_wait): Fill *RU out param with CHILD->p_rusage, not just zeros.
	Rewrote subfunction child_ready and its two callers into new
	subfunction reap to reduce duplicated code.

	* mgt.c (process_has_exited): Call ports_interrupt_rpcs last thing.

	* mgt.c (S_proc_reauthenticate): Release global_lock while making RPC.
	Don't mach_port_deallocate an argument port when returning an error,
	because mig does it for us.

2001-08-03  Roland McGrath  <roland@frob.com>

	* mgt.c (allocate_proc): Use memset instead of lots of 0 initializers.

2001-08-01  Roland McGrath  <roland@frob.com>

	* mgt.c (genpid): Rewritten.

2001-08-02  Marcus Brinkmann  <marcus@gnu.org>

	* mgt.c (genpid): Before checking if NEXTPID is free, check if it
	is greater than WRAP, and if yes, start over.

2001-07-13  Marcus Brinkmann  <marcus@gnu.org>

	* host.c (S_proc_getexecdata): New variable PORTS_ALLOCATED.
	Set it if we allocated a new buffer for PORTS.  If it is set,
	and allocation of a new buffer for INTS fails, unmap the buffer
	for PORTS.

	* host.c (S_proc_getexecdata): New variable I.  Go over all
	standard ports and increase the send right user reference by one.
	Set *PORTSPOLY to MACH_MSG_TYPE_MOVE_SEND.

2001-06-27  Marcus Brinkmann  <marcus@gnu.org>

	* info.c (S_proc_getprocinfo): If we return because mmap failed
	for *PIARRAY, be sure to munmap THDS if necessary.
