@@ -1,3 +1,8 @@
+2001-08-14  Marcus Brinkmann  <marcus@gnu.org>
+
+	* mgt.c (S_proc_dostop): If task_threads fails, resume the
+	suspended task.
+
 2001-08-06  Roland McGrath  <roland@frob.com>
 
 	* wait.c (S_proc_wait: reap): Set *PID_STATUS to CHILD->p_pid.
